# Stargazing_platform

./: README.md
stargazing_platform_program_2/: CMakeLists.txt  main  main.cpp  scence.cpp
stargazing_platform_program_2/WeatherPhoto/: weather.txt  weather_photo.txt
stargazing_platform_program_2/configure-text/: weather_data.txt
stargazing_platform_program_2/include/: button.hpp  font.hpp  http.hpp  lcddevice.hpp  location.hpp  photo.hpp  scence.hpp  tool.hpp
stargazing_platform_program_2/jpeg-arm/lib/: libjpeg.la  libjpeg.so.9.5.0
stargazing_platform_program_2/jpeg-arm/lib/pkgconfig/: libjpeg.pc
stargazing_platform_program_2/jpeg-pc/lib/pkgconfig/: libjpeg.pc
stargazing_platform_program_2/src/: CMakeLists.txt  button.cpp  font.cpp  http.cpp  lcddevice.cpp  location.cpp  photo.cpp  truetype.cpp
